create first interface use activity_main.xml and activity_homepage.xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,60 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#BEEBFF"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="358dp"
+        android:layout_height="512dp"
+        android:layout_margin="12dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:cardBackgroundColor="#D128C0FA"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:rippleColor="#3F51B5"
+        app:strokeColor="#3F51B5"
+        app:strokeWidth="4dp">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="277dp"
+            android:layout_height="233dp"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="54dp"
+            app:srcCompat="@drawable/boycotticon" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="320dp"
+            android:fontFamily="serif"
+            android:text="ONE SCAN CAN MAKE A CHANGE !"
+            android:textColor="#090909"
+            android:textSize="18sp"
+            android:textStyle="bold|italic" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="68dp"
+            android:layout_marginTop="395dp"
+            android:layout_marginLeft="75dp"
+            android:backgroundTint="#8BC34A"
+            android:fontFamily="serif"
+            android:text="GET STARTED"
+            android:onClick="openHomepage"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:strokeColor="#FFFFFF"
+            app:strokeWidth="3dp" />
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
