--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -50,7 +50,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="40dp"
         android:fontFamily="sans-serif"
         android:gravity="center"
@@ -59,6 +59,7 @@
         android:textColor="#090909"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/horizontal_line" />
 
@@ -76,7 +77,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintVertical_bias="0.45"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed" >
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="135dp"
+            app:srcCompat="@drawable/camera" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="105dp"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:text="Scan Product"
+            android:textColor="#1A1818"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+    </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_grey"
@@ -89,7 +111,28 @@
         app:layout_constraintBottom_toTopOf="@+id/card_orange"
         app:layout_constraintEnd_toEndOf="@+id/card_yellow"
         app:layout_constraintStart_toStartOf="@+id/card_yellow"
-        app:layout_constraintTop_toBottomOf="@+id/card_yellow" />
+        app:layout_constraintTop_toBottomOf="@+id/card_yellow" >
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="135dp"
+            app:srcCompat="@drawable/magnifier" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="105dp"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:text="Search Brand"
+            android:textColor="#161414"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+    </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_orange"
@@ -102,6 +145,27 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/card_yellow"
         app:layout_constraintStart_toStartOf="@+id/card_yellow"
-        app:layout_constraintTop_toBottomOf="@+id/card_grey" />
+        app:layout_constraintTop_toBottomOf="@+id/card_grey" >
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="135dp"
+            android:layout_marginTop="20dp"
+            app:srcCompat="@drawable/checklist" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="115dp"
+            android:layout_marginTop="105dp"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:text="Categories"
+            android:textColor="#0D0C0C"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
