change the colour on activity home & main

--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#BEEBFF"
+    android:background="#F6E0E9"
     tools:context=".HomepageActivity">
 
     <ImageView
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toTopOf="@id/horizontal_line"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back"
+        app:srcCompat="@drawable/back1"
         tools:ignore="ContentDescription" />
 
     <TextView
@@ -69,9 +69,12 @@
         android:layout_height="151dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        app:cardBackgroundColor="#FFEB3B"
+        app:cardBackgroundColor="#CDEBC5"
         app:cardCornerRadius="20dp"
         app:cardElevation="4dp"
+        app:rippleColor="#ED5794"
+        app:strokeColor="#ED5794"
+        app:strokeWidth="4dp"
         app:layout_constraintBottom_toTopOf="@+id/card_grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,9 +108,12 @@
         android:layout_width="335dp"
         android:layout_height="151dp"
         android:layout_marginTop="24dp"
-        app:cardBackgroundColor="#D8E3EB"
+        app:cardBackgroundColor= "#CDEBC5"
         app:cardCornerRadius="20dp"
         app:cardElevation="4dp"
+        app:rippleColor="#ED5794"
+        app:strokeColor="#ED5794"
+        app:strokeWidth="4dp"
         app:layout_constraintBottom_toTopOf="@+id/card_orange"
         app:layout_constraintEnd_toEndOf="@+id/card_yellow"
         app:layout_constraintStart_toStartOf="@+id/card_yellow"
@@ -139,9 +145,12 @@
         android:layout_width="335dp"
         android:layout_height="151dp"
         android:layout_marginTop="24dp"
-        app:cardBackgroundColor="#F4D29A"
+        app:cardBackgroundColor="#CDEBC5"
         app:cardCornerRadius="20dp"
         app:cardElevation="4dp"
+        app:rippleColor="#ED5794"
+        app:strokeColor="#ED5794"
+        app:strokeWidth="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/card_yellow"
         app:layout_constraintStart_toStartOf="@+id/card_yellow"
