--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toTopOf="@id/horizontal_line"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back1"
+        app:srcCompat="@drawable/backbutton"
         tools:ignore="ContentDescription" />
 
     <TextView
