--- a/app/src/main/res/layout/activity_scanproduct.xml
+++ b/app/src/main/res/layout/activity_scanproduct.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F6E0E9"
-    tools:context=".ScanProductActivity">
+    android:background="#F6E0E9">
 
 
     <ImageView
