design scanproductcamera dan sebagainya la

--- a/app/src/main/res/layout/activity_categories_mainpage.xml
+++ b/app/src/main/res/layout/activity_categories_mainpage.xml
@@ -97,7 +97,7 @@
         app:cardBackgroundColor="#F6E0E9"
         app:cardCornerRadius="20dp"
         app:strokeColor="#ED5794"
-        app:strokeWidth="2dp"
+        app:strokeWidth="3dp"
         app:rippleColor="#D81B60"
         app:layout_constraintTop_toBottomOf="@id/searchLayout"
         app:layout_constraintStart_toStartOf="parent"
@@ -137,7 +137,7 @@
         app:cardBackgroundColor="#F6E0E9"
         app:cardCornerRadius="20dp"
         app:strokeColor="#ED5794"
-        app:strokeWidth="2dp"
+        app:strokeWidth="3dp"
         app:rippleColor="#D81B60"
         app:layout_constraintTop_toBottomOf="@+id/cardChocolates"
         app:layout_constraintStart_toStartOf="@+id/cardChocolates"
@@ -177,7 +177,7 @@
         app:cardBackgroundColor="#F6E0E9"
         app:cardCornerRadius="20dp"
         app:strokeColor="#ED5794"
-        app:strokeWidth="2dp"
+        app:strokeWidth="3dp"
         app:rippleColor="#D81B60"
         app:layout_constraintTop_toBottomOf="@+id/cardBeverages"
         app:layout_constraintStart_toStartOf="@+id/cardBeverages"
@@ -210,23 +210,29 @@
     <!-- Bottom Navigation -->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/bottomNavCard"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="#F1F093"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="28dp"
         app:cardElevation="8dp"
+        app:cardBackgroundColor="#F1F093"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
+            android:id="@+id/bottom"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            app:itemIconTint="@color/ed5794"
-            app:itemTextColor="@android:color/black"
+            app:itemIconTint="#ED5794"
+            app:itemTextColor="#000000"
             app:menu="@menu/bottom_navigation"
-            app:labelVisibilityMode="labeled" />
+            app:labelVisibilityMode="labeled"
+            app:itemPaddingTop="10dp"
+            app:itemPaddingBottom="5dp"
+            app:itemIconSize="22dp"/>
+
     </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
