--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,9 +37,9 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
+            android:layout_marginLeft="35dp"
             android:layout_marginTop="320dp"
-            android:fontFamily="serif"
+            android:fontFamily="sans-serif-black"
             android:text="ONE SCAN CAN MAKE A CHANGE !"
             android:textColor="#000000"
             android:textSize="18sp"
@@ -52,12 +52,11 @@
             android:layout_marginTop="395dp"
             android:layout_marginLeft="75dp"
             android:backgroundTint="#CDEBC5"
-            android:fontFamily="serif"
+            android:fontFamily="sans-serif-black"
             android:text="GET STARTED"
             android:textColor="#000000"
             android:onClick="openHomepage"
             android:textSize="24sp"
-            android:textStyle="bold"
             app:strokeColor="#ED5794"
             app:strokeWidth="4dp" />
     </com.google.android.material.card.MaterialCardView>
