--- a/app/src/main/res/layout/activity_scanproduct.xml
+++ b/app/src/main/res/layout/activity_scanproduct.xml
@@ -108,7 +108,7 @@
                 android:id="@+id/btnScan"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:text="scan"
+                android:text="SCAN"
                 android:textAllCaps="false"
                 android:textStyle="bold"
                 android:backgroundTint="#B4D7F6"
@@ -123,7 +123,7 @@
                 android:id="@+id/btnExit"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:text="exit"
+                android:text="EXIT"
                 android:textAllCaps="false"
                 android:textStyle="bold"
                 android:backgroundTint="#FB7167"
