--- a/app/src/main/res/layout/activity_scan_product_camera.xml
+++ b/app/src/main/res/layout/activity_scan_product_camera.xml
@@ -128,12 +128,11 @@
             android:textStyle="bold" />
     </com.google.android.material.card.MaterialCardView>
 
-
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/bottomNavCard"
         android:layout_width="0dp"
-        android:layout_height="75dp"
-        android:layout_margin="16dp"
+        android:layout_height="70dp"
+        android:layout_margin="10dp"
         app:cardCornerRadius="28dp"
         app:cardElevation="8dp"
         app:cardBackgroundColor="#F1F093"
@@ -144,15 +143,15 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:itemIconTint="#ED5794"
             app:itemTextColor="#000000"
             app:menu="@menu/bottom_navigation"
             app:labelVisibilityMode="labeled"
-            app:itemIconSize="24dp"
-            app:itemPaddingTop="8dp"
-            app:itemPaddingBottom="8dp"/>
+            app:itemPaddingTop="10dp"
+            app:itemPaddingBottom="5dp"
+            app:itemIconSize="22dp"/>
 
     </com.google.android.material.card.MaterialCardView>
 
