--- a/app/src/main/res/layout/activity_main_categories.xml
+++ b/app/src/main/res/layout/activity_main_categories.xml
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CDEBC5"
+    android:background="#F6E0E9"
     tools:context=".MainCategoriesPage">
 
     <!-- Back Button -->
@@ -43,7 +42,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Search Section -->
+    <!-- Search Section (Optional, can be removed if not needed) -->
     <LinearLayout
         android:id="@+id/searchLayout"
         android:layout_width="0dp"
@@ -88,20 +87,22 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardChocolates"
         android:layout_width="0dp"
-        android:layout_height="120dp"
+        android:layout_height="151dp"
         android:layout_marginTop="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
         android:clickable="true"
         android:focusable="true"
-        app:cardBackgroundColor="#F6E0E9"
+        app:cardBackgroundColor="#CDEBC5"
         app:cardCornerRadius="20dp"
         app:strokeColor="#ED5794"
-        app:strokeWidth="3dp"
-        app:rippleColor="#D81B60"
+        app:strokeWidth="4dp"
+        app:rippleColor="#ED5794"
         app:layout_constraintTop_toBottomOf="@id/searchLayout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/cardBeverages"
+        app:layout_constraintVertical_chainStyle="packed">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -110,18 +111,19 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="90dp"
-                android:layout_height="80dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:src="@drawable/choclates"
                 tools:ignore="ContentDescription" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="sans-serif-condensed-medium"
                 android:text="Chocolates"
                 android:textColor="#1A1818"
-                android:textSize="18sp"
+                android:textSize="24sp"
                 android:textStyle="bold" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
@@ -130,18 +132,19 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardBeverages"
         android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="151dp"
+        android:layout_marginTop="24dp"
         android:clickable="true"
         android:focusable="true"
-        app:cardBackgroundColor="#F6E0E9"
+        app:cardBackgroundColor="#CDEBC5"
         app:cardCornerRadius="20dp"
         app:strokeColor="#ED5794"
-        app:strokeWidth="3dp"
-        app:rippleColor="#D81B60"
+        app:strokeWidth="4dp"
+        app:rippleColor="#ED5794"
         app:layout_constraintTop_toBottomOf="@+id/cardChocolates"
         app:layout_constraintStart_toStartOf="@+id/cardChocolates"
-        app:layout_constraintEnd_toEndOf="@+id/cardChocolates">
+        app:layout_constraintEnd_toEndOf="@+id/cardChocolates"
+        app:layout_constraintBottom_toTopOf="@+id/cardRestaurants">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -150,18 +153,19 @@
             android:gravity="center">
 
             <ImageView
-                android:layout_width="90dp"
-                android:layout_height="80dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:src="@drawable/beverages"
                 tools:ignore="ContentDescription" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="sans-serif-condensed-medium"
                 android:text="Beverages"
                 android:textColor="#1A1818"
-                android:textSize="18sp"
+                android:textSize="24sp"
                 android:textStyle="bold"/>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
@@ -170,18 +174,19 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardRestaurants"
         android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="151dp"
+        android:layout_marginTop="24dp"
         android:clickable="true"
         android:focusable="true"
-        app:cardBackgroundColor="#F6E0E9"
+        app:cardBackgroundColor="#CDEBC5"
         app:cardCornerRadius="20dp"
         app:strokeColor="#ED5794"
-        app:strokeWidth="3dp"
-        app:rippleColor="#D81B60"
+        app:strokeWidth="4dp"
+        app:rippleColor="#ED5794"
         app:layout_constraintTop_toBottomOf="@+id/cardBeverages"
         app:layout_constraintStart_toStartOf="@+id/cardBeverages"
-        app:layout_constraintEnd_toEndOf="@+id/cardBeverages">
+        app:layout_constraintEnd_toEndOf="@+id/cardBeverages"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -190,49 +195,21 @@
             android:gravity="center">
 
             <ImageView
-                android:layout_width="90dp"
-                android:layout_height="80dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:src="@drawable/fastfood"
                 tools:ignore="ContentDescription" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="sans-serif-condensed-medium"
                 android:text="Restaurants"
                 android:textColor="#1A1818"
-                android:textSize="18sp"
+                android:textSize="24sp"
                 android:textStyle="bold"/>
         </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
-
-
-    <!-- Bottom Navigation -->
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/bottomNavCard"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="28dp"
-        app:cardElevation="8dp"
-        app:cardBackgroundColor="#F1F093"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            app:itemIconTint="#ED5794"
-            app:itemTextColor="#000000"
-            app:menu="@menu/bottom_navigation"
-            app:labelVisibilityMode="labeled"
-            app:itemPaddingTop="10dp"
-            app:itemPaddingBottom="5dp"
-            app:itemIconSize="22dp"/>
-
     </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
